# notifications

./: CMakeLists.txt  LICENSE  README.md  example-config  main.c
src/: CMakeLists.txt  config.c  main.c  main.h  node.c  notifications.c  parser.c
